swagger upd, waterController percentage round
