# swagger.json
@@ -19,6 +19,7 @@
       "name": "User",
       "description": "User profile endpoints"
     },
+
     {
       "name": "WaterRate",
       "description": "User water norm endpoints"
@@ -91,8 +92,10 @@
                     "_id": {
                       "$ref": "#/components/_id"
                     },
-                    "email": {
-                      "$ref": "#/components/email"
+                    "verificationPath": {
+                      "type": "string",
+                      "description": "User name",
+                      "example": "https://tracker-of-water-oqqk.onrender.com/api/api-docs/WaterTrackerFrontend/verification/{verificationToken}"
                     }
                   }
                 }
@@ -155,7 +158,7 @@
     "/auth/login": {
       "post": {
         "tags": ["Auth"],
-        "summary": "User login",
+        "summary": "User is logged in",
 
         "requestBody": {
           "description": "User email and password",
@@ -234,40 +237,13 @@
     "/auth/logout": {
       "post": {
         "tags": ["Auth"],
-        "summary": "User has logged out",
+        "summary": "User is logged out",
 
         "security": [{ "Bearer": [] }],
 
         "responses": {
           "204": {
-            "description": "User is logout",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "properties": {
-                    "user": {
-                      "type": "object",
-                      "description": "User object",
-                      "properties": {
-                        "name": {
-                          "$ref": "#/components/name"
-                        },
-                        "email": {
-                          "$ref": "#/components/email"
-                        },
-                        "avatarURL": {
-                          "$ref": "#/components/avatarURL"
-                        },
-                        "gender": {
-                          "$ref": "#/components/gender"
-                        }
-                      }
-                    }
-                  }
-                }
-              }
-            }
+            "description": "User is logged out"
           },
           "400": {
             "$ref": "#/components/responses/400"
@@ -410,27 +386,22 @@
               "application/json": {
                 "schema": {
                   "type": "object",
+                  "description": "User object",
                   "properties": {
-                    "user": {
-                      "type": "object",
-                      "description": "User object",
-                      "properties": {
-                        "_id": {
-                          "$ref": "#/components/_id"
-                        },
-                        "name": {
-                          "$ref": "#/components/name"
-                        },
-                        "email": {
-                          "$ref": "#/components/email"
-                        },
-                        "avatarURL": {
-                          "$ref": "#/components/avatarURL"
-                        },
-                        "gender": {
-                          "$ref": "#/components/gender"
-                        }
-                      }
+                    "_id": {
+                      "$ref": "#/components/_id"
+                    },
+                    "name": {
+                      "$ref": "#/components/name"
+                    },
+                    "email": {
+                      "$ref": "#/components/email"
+                    },
+                    "avatarURL": {
+                      "$ref": "#/components/avatarURL"
+                    },
+                    "gender": {
+                      "$ref": "#/components/gender"
                     }
                   }
                 }
@@ -482,24 +453,10 @@
               "application/json": {
                 "schema": {
                   "type": "object",
+                  "description": "Avatar url",
                   "properties": {
-                    "user": {
-                      "type": "object",
-                      "description": "User object",
-                      "properties": {
-                        "name": {
-                          "$ref": "#/components/name"
-                        },
-                        "email": {
-                          "$ref": "#/components/email"
-                        },
-                        "avatarURL": {
-                          "$ref": "#/components/avatarURL"
-                        },
-                        "gender": {
-                          "$ref": "#/components/gender"
-                        }
-                      }
+                    "avatarURL": {
+                      "$ref": "#/components/avatarURL"
                     }
                   }
                 }
@@ -544,6 +501,9 @@
                       },
                       "email": {
                         "$ref": "#/components/email"
+                      },
+                      "gender": {
+                        "$ref": "#/components/gender"
                       }
                     }
                   },
@@ -552,10 +512,10 @@
                     "description": "User security Info",
                     "properties": {
                       "oldPassword": {
-                        "$ref": "#/components/email"
+                        "$ref": "#/components/password"
                       },
                       "newPassword": {
-                        "$ref": "#/components/email"
+                        "$ref": "#/components/password"
                       }
                     }
                   }
@@ -617,6 +577,23 @@
 
         "security": [{ "Bearer": [] }],
 
+        "requestBody": {
+          "description": "User password",
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "password": {
+                    "$ref": "#/components/password"
+                  }
+                }
+              }
+            }
+          }
+        },
+
         "responses": {
           "200": {
             "description": "Successful operation",
@@ -624,15 +601,20 @@
               "application/json": {
                 "schema": {
                   "type": "object",
+                  "description": "User object",
                   "properties": {
-                    "user": {
-                      "type": "object",
-                      "description": "User object",
-                      "properties": {
-                        "name": {
-                          "$ref": "#/components/name"
-                        }
-                      }
+                    "name": {
+                      "$ref": "#/components/name"
+                    },
+                    "email": {
+                      "$ref": "#/components/email"
+                    },
+                    "recordsDeleted": {
+                      "type": "integer",
+                      "format": "int32",
+                      "description": "Number of deleted records",
+                      "minimum": 0,
+                      "example": 27
                     }
                   }
                 }
@@ -743,16 +725,7 @@
           "content": {
             "application/json": {
               "schema": {
-                "type": "object",
-                "required": true,
-                "properties": {
-                  "date": {
-                    "$ref": "#/components/date"
-                  },
-                  "ml": {
-                    "$ref": "#/components/consumedWaterValue"
-                  }
-                }
+                "$ref": "#/components/waterRequest"
               }
             }
           }
@@ -764,30 +737,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "type": "object",
-                  "properties": {
-                    "userId": {
-                      "$ref": "#/components/_id"
-                    },
-                    "entryDate": {
-                      "$ref": "#/components/date"
-                    },
-                    "dailyWaterGoal": {
-                      "$ref": "#/components/dailyWaterGoal"
-                    },
-                    "consumedWater": {
-                      "$ref": "#/components/consumedWaterValue"
-                    },
-                    "consumedTimes": {
-                      "$ref": "#/components/consumedTimes"
-                    },
-                    "consumedWaterPercentage": {
-                      "$ref": "#/components/consumedWaterPercentage"
-                    },
-                    "waterIntakes": {
-                      "$ref": "#/components/waterIntakes"
-                    }
-                  }
+                  "$ref": "#/components/waterResponse"
                 }
               }
             }
@@ -818,16 +768,7 @@
           "content": {
             "application/json": {
               "schema": {
-                "type": "object",
-                "required": true,
-                "properties": {
-                  "ml": {
-                    "$ref": "#/components/consumedWaterValue"
-                  },
-                  "date": {
-                    "$ref": "#/components/date"
-                  }
-                }
+                "$ref": "#/components/waterRequest"
               }
             }
           }
@@ -835,7 +776,14 @@
 
         "responses": {
           "200": {
-            "$ref": "#/components/responses/200"
+            "description": "Successful operation",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/waterResponse"
+                }
+              }
+            }
           },
           "400": {
             "$ref": "#/components/responses/400"
@@ -866,6 +814,9 @@
                 "properties": {
                   "date": {
                     "$ref": "#/components/date"
+                  },
+                  "timeZoneOffset": {
+                    "$ref": "#/components/timeZoneOffset"
                   }
                 }
               }
@@ -895,25 +846,22 @@
         "tags": ["WaterToday"],
         "summary": "Get current date water records",
 
-        "security": [{ "Bearer": [] }],
-
-        "requestBody": {
-          "description": "User data record date",
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": {
-                "type": "object",
-                "required": true,
-                "properties": {
-                  "date": {
-                    "$ref": "#/components/date"
-                  }
-                }
+        "parameters": [
+          {
+            "name": "date",
+            "in": "query",
+            "required": true,
+            "description": "Data by the date (YYYY-MM-DD)",
+            "schema": {
+              "type": "string",
+              "date": {
+                "$ref": "#/components/date"
               }
             }
           }
-        },
+        ],
+
+        "security": [{ "Bearer": [] }],
 
         "responses": {
           "200": {
@@ -937,9 +885,34 @@
         "tags": ["WaterMonth"],
         "summary": "Get month water records",
 
-        "security": [{ "Bearer": [] }],
+        "parameters": [
+          {
+            "name": "startDate",
+            "in": "query",
+            "required": true,
+            "description": "Start from the date (YYYY-MM-DD)",
+            "schema": {
+              "type": "string",
+              "date": {
+                "$ref": "#/components/date"
+              }
+            }
+          },
+          {
+            "name": "endDate",
+            "in": "query",
+            "required": true,
+            "description": "Until the date (YYYY-MM-DD)",
+            "schema": {
+              "type": "string",
+              "date": {
+                "$ref": "#/components/date"
+              }
+            }
+          }
+        ],
 
-        "requestBody": {},
+        "security": [{ "Bearer": [] }],
 
         "responses": {
           "200": {
@@ -1003,7 +976,7 @@
         }
       },
 
-      "WaterRecord (db)": {
+      "waterRecord (db)": {
         "type": "object",
         "required": ["userId", "entryDate"],
         "properties": {
@@ -1085,10 +1058,9 @@
       "name": "passwordRecoveryToken",
       "in": "path",
       "type": "string",
-      "description": "Verification token from e-mail ",
+      "description": "Verification token from e-mail",
       "required": true
     },
-
     "dailyWaterGoal": {
       "type": "integer",
       "format": "int32",
@@ -1122,6 +1094,13 @@
       "default": 0,
       "example": 80
     },
+    "timeZoneOffset": {
+      "type": "integer",
+      "format": "int32",
+      "description": "Time zone offset in min",
+      "example": -120
+    },
+
     "waterIntakes": {
       "type": "array",
       "items": {
@@ -1140,19 +1119,62 @@
         }
       }
     },
+    "waterRequest": {
+      "type": "object",
+      "properties": {
+        "date": {
+          "$ref": "#/components/date"
+        },
+        "timeZoneOffset": {
+          "$ref": "#/components/timeZoneOffset"
+        },
+        "ml": {
+          "$ref": "#/components/consumedWaterValue"
+        }
+      }
+    },
+    "waterResponse": {
+      "type": "object",
+      "properties": {
+        "dailyWaterGoal": {
+          "$ref": "#/components/dailyWaterGoal"
+        },
+        "consumedAt": {
+          "$ref": "#/components/date"
+        },
+        "consumedWater": {
+          "$ref": "#/components/consumedWaterValue"
+        },
+        "consumedTimes": {
+          "$ref": "#/components/consumedTimes"
+        },
+        "consumedWaterPercentage": {
+          "$ref": "#/components/consumedWaterPercentage"
+        },
+        "waterIntakes": {
+          "$ref": "#/components/waterIntakes"
+        }
+      }
+    },
 
     "responses": {
       "200": {
         "description": "Successful operation"
       },
       "201": {
-        "description": "Successful operation"
+        "description": "Resource has been created"
+      },
+      "204": {
+        "description": "Successful operation. No response content"
       },
       "400": {
         "description": "Bad request"
       },
       "401": {
         "description": "Unauthorized"
+      },
+      "403": {
+        "description": "Forbidden"
       },
       "404": {
         "description": "Resource not found"
